--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,9 @@
 /*wait why is this empty? */
+#night{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+}
